server: prevent image in banner pages from getting too large

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -94,7 +94,7 @@
       @apply text-xl wsl-text-muted;
     }
     img {
-      @apply px-8 py-4;
+      @apply px-8 py-4 mx-auto w-3/4;
     }
     p {
       @apply p-4 text-left md:text-justify font-light;
